feat: :brain: added 100 AI cars now working on storing prev data

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@
 	--midnight-voilet: #1f242d;
 	--groung-green: #07252d;
 }
-#myCanvas {
+#networkCanvas {
+	background: black;
+}
+#carCanvas {
 	background: lightgray;
 }
