--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 	font-size: 10px;
 	background: darkgray;
 	overflow: hidden;
-	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 :root {
 	--white: #ffffff;
@@ -20,6 +22,20 @@
 	--cyan: #00ffff;
 	--midnight-voilet: #1f242d;
 	--groung-green: #07252d;
+}
+#verticalButtons {
+	display: flex;
+	flex-direction: column;
+}
+button {
+	border: none;
+	border-radius: 5px;
+	padding: 5px 5px 7px 5px;
+	margin: 2px;
+	cursor: pointer;
+}
+button:hover {
+	background: blue;
 }
 #networkCanvas {
 	background: black;
